--- a/signin.html
+++ b/signin.html
@@ -10,12 +10,12 @@
 <body>
     <div class="login-wrapper">
         <form class="login-form" action="/login" method="post">
-          <h2>Login</h2>
+          <h2>Sign in</h2>
           <label for="username">Username:</label>
           <input type="text" id="username" name="username" required>
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" required>
-          <label for="password">Password:</label>
+          <label for="password">Confirm Password:</label>
           <input type="password" id="password" name="cpassword" required>
           <button type="submit">Login</button>
         </form>
